- Summary: fix chart compiling failure - Bugzilla Bug (s) Resolved:
- Description:
Integer.valueOf() is a new api only available in jdk5.0, use old style new Integer() api instead.
- Tests Description  :

- Files Edited:

- Files Added:

- Notes to Build Team:

- Notes to Developers:

- Notes to QA:

- Notes to Documentation: